deploy/authService/authService-middlewares.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-auth-service
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /srv/auth-service
