deploy/authService/authService-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: auth-service
  labels:
    app: auth-service

spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: 127.0.0.1:5000/auth-service:latest
          ports:
            - name: web
              containerPort: 8080
