deploy/authService/authService-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service

spec:
  ports:
    - name: web
      port: 8080
      targetPort: web

  selector:
    app: auth-service
